--- a/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/de_CH/LC_MESSAGES/onegov.town6.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2023-11-29 11:18+0100\n"
+"POT-Creation-Date: 2024-01-24 14:02+0100\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: German\n"
@@ -85,6 +85,54 @@ msgid "The chat is currently in a test-phase. Activate at your own risk."
 msgstr ""
 "Der Chat befindet sich aktuell in einer Test-Phase. Auf eigenes Risiko "
 "aktivieren."
+
+msgid "Specific Opening Hours"
+msgstr "Bestimmte Öffnungszeiten"
+
+msgid "If unchecked, the chat is open 24/7"
+msgstr "Wenn nicht angewählt, ist der Chat 24/7 verfügbar"
+
+msgid "Opening Hours"
+msgstr "Öffnungszeiten"
+
+msgid "Please add a day and times to each opening hour entry."
+msgstr "Bitte fügen Sie zu jeder Öffnungszeit einen Tag und eine Uhrzeit hinzu."
+
+msgid "Start time cannot be later than end time."
+msgstr "Die Startzeit kann nicht später sein als die Endzeit."
+
+msgid "day"
+msgstr "Tag"
+
+msgid "Start"
+msgstr "Start"
+
+msgid "End"
+msgstr "Ende"
+
+msgid "Remove"
+msgstr "Entfernen"
+
+msgid "Mo"
+msgstr "Mo"
+
+msgid "Tu"
+msgstr "Di"
+
+msgid "We"
+msgstr "Mi"
+
+msgid "Th"
+msgstr "Do"
+
+msgid "Fr"
+msgstr "Fr"
+
+msgid "Sa"
+msgstr "Sa"
+
+msgid "Su"
+msgstr "So"
 
 msgid "Events"
 msgstr "Veranstaltungen"
@@ -359,27 +407,6 @@ msgstr "Möchten Sie diese Einteilung wirklich löschen?"
 msgid "Delete allocation"
 msgstr "Einteilung löschen"
 
-msgid "Mo"
-msgstr "Mo"
-
-msgid "Tu"
-msgstr "Di"
-
-msgid "We"
-msgstr "Mi"
-
-msgid "Th"
-msgstr "Do"
-
-msgid "Fr"
-msgstr "Fr"
-
-msgid "Sa"
-msgstr "Sa"
-
-msgid "Su"
-msgstr "So"
-
 #, python-format
 msgid "Every ${days} until ${end}"
 msgstr "Jeden ${days} bis zum ${end}."
@@ -635,6 +662,9 @@ msgid "Something missing? Propose a new entry."
 msgstr ""
 "Fehlt ein Eintrag im Verzeichnis? Schlagen Sie einen neuen Eintrag vor."
 
+msgid "Internal Notes"
+msgstr ""
+
 msgid "External link"
 msgstr "Externe Verknüpfung"
 
@@ -822,9 +852,6 @@ msgstr "Kontakt"
 msgid "more"
 msgstr "mehr"
 
-msgid "Opening Hours"
-msgstr "Öffnungszeiten"
-
 msgid "Submit"
 msgstr "Absenden"
 
@@ -956,9 +983,6 @@ msgstr "Initiiert"
 
 msgid "Submitted"
 msgstr "Gemeldet"
-
-msgid "submitted"
-msgstr "angemeldet"
 
 msgid "Withdrawn"
 msgstr "Zurückgezogen"
@@ -1829,6 +1853,9 @@ msgstr ""
 
 msgid "Unsubscribe"
 msgstr "Abmelden"
+
+msgid "submitted"
+msgstr "angemeldet"
 
 msgid "No dates found, please select dates in the calendar first"
 msgstr "Keine Termine gefunden, bitte wählen Sie erst Termine im Kalender aus"
