--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2023-11-29 11:18+0100\n"
+"POT-Creation-Date: 2024-01-24 14:02+0100\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -85,6 +85,54 @@ msgstr "Activer le chat"
 msgid "The chat is currently in a test-phase. Activate at your own risk."
 msgstr ""
 "Le chat est actuellement en phase de test. Activer à vos risques et périls"
+
+msgid "Specific Opening Hours"
+msgstr "Heures d'ouverture spécifiques"
+
+msgid "If unchecked, the chat is open 24/7"
+msgstr "Si non sélectionné, le chat est disponible 24h/24 et 7j/7"
+
+msgid "Opening Hours"
+msgstr "Horaires d'ouverture"
+
+msgid "Please add a day and times to each opening hour entry."
+msgstr "Veuillez ajouter un jour et des heures à chaque heure d'ouverture."
+
+msgid "Start time cannot be later than end time."
+msgstr "L'heure de début ne peut être postérieure à l'heure de fin"
+
+msgid "day"
+msgstr "jour"
+
+msgid "Start"
+msgstr "Démarrage"
+
+msgid "End"
+msgstr "Fin"
+
+msgid "Remove"
+msgstr "Retirer"
+
+msgid "Mo"
+msgstr "Lu"
+
+msgid "Tu"
+msgstr "Ma"
+
+msgid "We"
+msgstr "Me"
+
+msgid "Th"
+msgstr "Je"
+
+msgid "Fr"
+msgstr "Ve"
+
+msgid "Sa"
+msgstr "Sa"
+
+msgid "Su"
+msgstr "Di"
 
 msgid "Events"
 msgstr "Événements"
@@ -356,27 +404,6 @@ msgstr "Voulez-vous vraiment supprimer cette allocation ?"
 msgid "Delete allocation"
 msgstr "Supprimer l'allocation"
 
-msgid "Mo"
-msgstr "Lu"
-
-msgid "Tu"
-msgstr "Ma"
-
-msgid "We"
-msgstr "Me"
-
-msgid "Th"
-msgstr "Je"
-
-msgid "Fr"
-msgstr "Ve"
-
-msgid "Sa"
-msgstr "Sa"
-
-msgid "Su"
-msgstr "Di"
-
 #, python-format
 msgid "Every ${days} until ${end}"
 msgstr "Tous les ${days} jusqu'à ${end}"
@@ -629,6 +656,9 @@ msgstr "Proposer une entrée"
 msgid "Something missing? Propose a new entry."
 msgstr "Il manque quelque chose? Proposez une nouvelle entrée."
 
+msgid "Internal Notes"
+msgstr ""
+
 msgid "External link"
 msgstr "Lien externe"
 
@@ -820,9 +850,6 @@ msgstr "Contact"
 msgid "more"
 msgstr "plus"
 
-msgid "Opening Hours"
-msgstr "Horaires d'ouverture"
-
 msgid "Submit"
 msgstr "Envoyer"
 
@@ -952,9 +979,6 @@ msgstr "Initié"
 
 msgid "Submitted"
 msgstr "Soumis"
-
-msgid "submitted"
-msgstr "soumis"
 
 msgid "Withdrawn"
 msgstr "Retiré"
@@ -1825,6 +1849,9 @@ msgstr ""
 
 msgid "Unsubscribe"
 msgstr "Se désabonner"
+
+msgid "submitted"
+msgstr "soumis"
 
 msgid "No dates found, please select dates in the calendar first"
 msgstr "Aucune date trouvée, sélectionnez les dates dans le calendrier d'abord"
