Minor improvements and translation

--- a/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/fr_CH/LC_MESSAGES/onegov.town6.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2024-01-25 09:26+0100\n"
+"POT-Creation-Date: 2024-01-30 09:40+0100\n"
 "PO-Revision-Date: 2021-03-03 14:04+0100\n"
 "Last-Translator: Lukas Burkhard <lukas.burkhard@seantis.ch>\n"
 "Language-Team: French\n"
@@ -36,9 +36,11 @@ msgid "Confirmation"
 msgstr "Confirmation"
 
 msgid ""
-"Ich bestätige, dass mir bewusst ist, dass dieser Chat gespeichert und der "
-"Verlauf an mich per Mail gesendet wird."
+"I confirm that I am aware that this chat will be saved and the history will "
+"be sent to me by email."
 msgstr ""
+"Je confirme que je suis conscient(e) que ce chat sera sauvegardé et que "
+"l'historique me sera envoyé par e-mail."
 
 msgid "Chat ID"
 msgstr "Chat ID"
