--- a/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
+++ b/src/onegov/town6/locale/it_CH/LC_MESSAGES/onegov.town6.po
@@ -1,7 +1,7 @@
 # This file was generated from translations.town6.xlsx
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2024-01-25 09:26+0100\n"
+"POT-Creation-Date: 2024-01-30 09:40+0100\n"
 "PO-Revision-Date: 2021-09-27 16:02+0200\n"
 "Language: it_CH\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,9 +27,11 @@ msgid "Confirmation"
 msgstr "Conferma"
 
 msgid ""
-"Ich bestätige, dass mir bewusst ist, dass dieser Chat gespeichert und der "
-"Verlauf an mich per Mail gesendet wird."
+"I confirm that I am aware that this chat will be saved and the history will "
+"be sent to me by email."
 msgstr ""
+"Confermo di essere a conoscenza del fatto che questa chat verrà salvata e "
+"che la cronologia mi verrà inviata via e-mail."
 
 msgid "Chat ID"
 msgstr "Chat ID "
