--- a/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/de_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE 1.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-28 07:23+0200\n"
+"POT-Creation-Date: 2024-02-07 08:08+0100\n"
 "PO-Revision-Date: 2022-03-24 15:35+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: German\n"
@@ -93,7 +93,7 @@ msgstr "Ungültige Fliesskommazahl: ${col}"
 
 #, python-format
 msgid "Invalid decimal number: ${col}"
-msgstr ""
+msgstr "Ungültige Dezimalzahl: ${col}"
 
 #, python-format
 msgid "Not an alphanumeric: ${col}"
@@ -108,7 +108,7 @@ msgid "Invalid color: ${col}"
 msgstr "Ungültige Farbe: ${col}"
 
 msgid "File not supported"
-msgstr ""
+msgstr "Dateiformat nicht unterstützt"
 
 msgid "Invalid election values"
 msgstr "Ungültige Wahldaten"
@@ -166,7 +166,7 @@ msgstr "Wahlstatistik"
 
 #, python-format
 msgid "Error in anzpendentgde: ${msg}"
-msgstr ""
+msgstr "Fehler in anzpendentgde: ${msg}"
 
 #, python-format
 msgid "Candidate with id ${id} not in wm_kandidaten"
@@ -177,11 +177,11 @@ msgid "Entity with id ${id} not in wmstatic_gemeinden"
 msgstr "Gemeinde mit id ${id} nicht in wmstatic_gemeinden"
 
 msgid "Ausmittlungsstand set to final but AnzPendentGde is not 0"
-msgstr ""
+msgstr "Ausmittlungsstand auf final gesetzt, aber AnzPendentGde ist nicht 0"
 
 #, python-format
 msgid "${msg}"
-msgstr ""
+msgstr "${msg}"
 
 #, python-format
 msgid "${var} is missing."
@@ -240,7 +240,7 @@ msgstr "Konnte 'Leere Stimmzettel' nicht lesen"
 
 #, python-format
 msgid "Error in anzpendentgde/anzgdependent: ${msg}"
-msgstr ""
+msgstr "Fehler in anzpendentgde/anzgdependent: ${msg}"
 
 msgid "Term"
 msgstr "Suchbegriff"
@@ -712,6 +712,9 @@ msgstr "Schlussresultate"
 msgid "Counter proposal accepted"
 msgstr "Gegenentwurf angenommen"
 
+msgid "Manage"
+msgstr "Verwalten"
+
 msgid "Upload tokens"
 msgstr "Upload Token"
 
@@ -741,9 +744,6 @@ msgstr "Cache leeren"
 
 msgid "Administration"
 msgstr "Admin"
-
-msgid "Manage"
-msgstr "Verwalten"
 
 msgid "Subscribers"
 msgstr "Abonnenten"
