--- a/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/fr_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-06-28 07:23+0200\n"
+"POT-Creation-Date: 2024-02-07 08:08+0100\n"
 "PO-Revision-Date: 2022-03-22 07:59+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -80,23 +80,23 @@ msgstr "${name} ne fait pas partie de ${district}"
 
 #, python-format
 msgid "Empty value: ${col}"
-msgstr "Valeur vide: ${col}"
+msgstr "Valeur vide : ${col}"
 
 #, python-format
 msgid "Invalid integer: ${col}"
-msgstr "Intègre non valide: ${col}"
+msgstr "Intègre non valide : ${col}"
 
 #, python-format
 msgid "Invalid float number: ${col}"
-msgstr "Nombre flottant invalide: ${col}"
+msgstr "Numéro de flottant non valide : ${col}"
 
 #, python-format
 msgid "Invalid decimal number: ${col}"
-msgstr ""
+msgstr "Nombre décimal non valide : ${col}"
 
 #, python-format
 msgid "Not an alphanumeric: ${col}"
-msgstr "Pas un alphanumerique: ${col}"
+msgstr "Pas un alphanumerique : ${col}"
 
 #, python-format
 msgid "Invalid gender: ${value}"
@@ -107,7 +107,7 @@ msgid "Invalid color: ${col}"
 msgstr "Couleur non valide : ${col}"
 
 msgid "File not supported"
-msgstr ""
+msgstr "Format de fichier non pris en charge"
 
 msgid "Invalid election values"
 msgstr "Valeurs des élections non valides"
@@ -165,7 +165,7 @@ msgstr "Statistiques des élections"
 
 #, python-format
 msgid "Error in anzpendentgde: ${msg}"
-msgstr ""
+msgstr "Erreur dans anzpendentgde : ${msg}"
 
 #, python-format
 msgid "Candidate with id ${id} not in wm_kandidaten"
@@ -176,11 +176,11 @@ msgid "Entity with id ${id} not in wmstatic_gemeinden"
 msgstr "Commune avec id ${id} pas dans wmstatic_gemeinden"
 
 msgid "Ausmittlungsstand set to final but AnzPendentGde is not 0"
-msgstr ""
+msgstr "Ausmittlungsstand est réglé sur final mais AnzPendentGde n'est pas 0"
 
 #, python-format
 msgid "${msg}"
-msgstr ""
+msgstr "${msg"
 
 #, python-format
 msgid "${var} is missing."
@@ -239,7 +239,7 @@ msgstr "Impossible de connaître les votes blancs"
 
 #, python-format
 msgid "Error in anzpendentgde/anzgdependent: ${msg}"
-msgstr ""
+msgstr "Erreur dans anzpendentgde/anzgdependent : ${msg}"
 
 msgid "Term"
 msgstr "Terme de recherche"
@@ -712,6 +712,9 @@ msgstr "Résultats finaux"
 msgid "Counter proposal accepted"
 msgstr "Contre-projet accepté"
 
+msgid "Manage"
+msgstr "Gérer"
+
 msgid "Upload tokens"
 msgstr "Upload tokens"
 
@@ -741,9 +744,6 @@ msgstr "Effacer le cache"
 
 msgid "Administration"
 msgstr "Admin"
-
-msgid "Manage"
-msgstr "Gérer"
 
 msgid "Subscribers"
 msgstr "Abonnés"
