--- a/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-07 08:08+0100\n"
+"POT-Creation-Date: 2024-02-07 08:44+0100\n"
 "PO-Revision-Date: 2022-03-22 08:01+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -705,7 +705,7 @@ msgstr "Downloads"
 
 #, python-format
 msgid "By ${by}"
-msgstr ""
+msgstr "Tenor ${by}"
 
 msgid "Municipalities"
 msgstr "Vischnancas"
@@ -1525,6 +1525,8 @@ msgstr "L'adressa è nunvalaivla u il link è nunvalaivel."
 msgid ""
 "The map shows the percentage of votes for the selected candidate by ${by}."
 msgstr ""
+"La charta mussa la cumpart procentuala da las vuschs da la candidata "
+"tschernida u dal candidat tschernì tenor ${by}."
 
 msgid ""
 "The figure with elected candidates will be available as soon the final "
@@ -1543,6 +1545,8 @@ msgstr ""
 #, python-format
 msgid "The map shows the percentage of votes for the selected list by ${by}."
 msgstr ""
+"La charta mussa la cumpart procentuala da las vuschs da la glista tschernida "
+"tenor ${by}."
 
 msgid "Access Denied"
 msgstr "Refusà l'access"
