--- a/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/it_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-07 08:08+0100\n"
+"POT-Creation-Date: 2024-02-07 08:44+0100\n"
 "PO-Revision-Date: 2022-03-22 08:00+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -694,7 +694,7 @@ msgstr "Download"
 
 #, python-format
 msgid "By ${by}"
-msgstr ""
+msgstr "Per ${by}"
 
 msgid "Municipalities"
 msgstr "Comuni"
@@ -1509,6 +1509,8 @@ msgstr ""
 msgid ""
 "The map shows the percentage of votes for the selected candidate by ${by}."
 msgstr ""
+"La carta mostra la percentuale dei voti del/la candidato/a selezionato/a per "
+"${by}."
 
 msgid ""
 "The figure with elected candidates will be available as soon the final "
@@ -1527,6 +1529,7 @@ msgstr ""
 #, python-format
 msgid "The map shows the percentage of votes for the selected list by ${by}."
 msgstr ""
+"La carta mostra la percentuale dei voti della lista selezionata per ${by}"
 
 msgid "Access Denied"
 msgstr "Accesso Negato"
