--- a/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
+++ b/src/onegov/election_day/locale/rm_CH/LC_MESSAGES/onegov.election_day.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-07 08:08+0100\n"
+"POT-Creation-Date: 2024-02-07 08:44+0100\n"
 "PO-Revision-Date: 2022-03-22 08:01+0100\n"
 "Last-Translator: Marc Sommerhalder <marc.sommerhalder@seantis.ch>\n"
 "Language-Team: \n"
@@ -702,6 +702,10 @@ msgstr "Partidas"
 
 msgid "Downloads"
 msgstr "Downloads"
+
+#, python-format
+msgid "By ${by}"
+msgstr "Tenor ${by}"
 
 msgid "Municipalities"
 msgstr "Vischnancas"
@@ -1517,6 +1521,13 @@ msgstr "Midà il pled-clav."
 msgid "Wrong username or password reset link not valid any more."
 msgstr "L'adressa è nunvalaivla u il link è nunvalaivel."
 
+#, python-format
+msgid ""
+"The map shows the percentage of votes for the selected candidate by ${by}."
+msgstr ""
+"La charta mussa la cumpart procentuala da las vuschs da la candidata "
+"tschernida u dal candidat tschernì tenor ${by}."
+
 msgid ""
 "The figure with elected candidates will be available as soon the final "
 "results are published."
@@ -1530,6 +1541,12 @@ msgid ""
 msgstr ""
 "La grafica cun las colliaziuns da glistas è disponibla, uschespert ch'ils "
 "resultats finals èn publitgads."
+
+#, python-format
+msgid "The map shows the percentage of votes for the selected list by ${by}."
+msgstr ""
+"La charta mussa la cumpart procentuala da las vuschs da la glista tschernida "
+"tenor ${by}."
 
 msgid "Access Denied"
 msgstr "Refusà l'access"
