--- a/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
+++ b/src/onegov/landsgemeinde/locale/de_CH/LC_MESSAGES/onegov.landsgemeinde.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: OneGov Cloud 1.0\n"
-"POT-Creation-Date: 2023-10-17 10:54+0200\n"
+"POT-Creation-Date: 2024-02-07 14:26+0100\n"
 "PO-Revision-Date: 2021-03-03 16:24+0100\n"
 "Language-Team: German\n"
 "Language: de_CH\n"
@@ -69,11 +69,19 @@ msgstr ""
 msgid "Alternatively: Page from the Memorial"
 msgstr "Alternativ: Seite aus dem Memorial"
 
-msgid "Video timestamp"
-msgstr "Video-Zeitstempel"
+msgid "Start"
+msgstr "Start"
 
 msgid "Progress"
 msgstr "Ablauf"
+
+msgid "Automatically updated when agenda item changed to ongoing."
+msgstr ""
+"Wird automatisch aktualisiert, wenn das Traktandum auf 'laufend' gesetzt "
+"wird."
+
+msgid "Video timestamp"
+msgstr "Video-Zeitstempel"
 
 msgid "Text"
 msgstr "Text"
@@ -259,6 +267,25 @@ msgstr "Audio"
 
 msgid "Download audio"
 msgstr "Audio herunterladen"
+
+msgid "Search term"
+msgstr "Suchbegriff"
+
+msgid "Skip navigation"
+msgstr "Navigation überspringen"
+
+msgid "Back to the homepage"
+msgstr "Zurück zur Startseite"
+
+msgid "Logo"
+msgstr "Logo"
+
+msgid "The form contains errors. Please check the fields marked in red."
+msgstr ""
+"Das Formular enthält Fehler. Bitte die rot markierten Felder überprüfen."
+
+msgid "Copied to Clipboard!"
+msgstr "In die Zwischenablage kopiert!"
 
 msgid "Close"
 msgstr "Schliessen"
